# RoutineCloud

./: README.md
backend/: bedtime_routine.service  display_thread.py  fastapi_server.py  main.py  pyproject.toml  requirements.txt  routine_state.py  test_api.py  utils.py  ws_client.py
backend/display/: colors.py  current_task_display.py  display_thread.py  next_tasks_display.py  time_widget.py  utils.py
backend/entity/: __init__.py  base.py  db_init.py  example.py  routine.py  routine_task.py  task.py
frontend/: README.md  package-lock.json  package.json
